--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://kit.fontawesome.com/b0058ae0f4.js" crossorigin="anonymous"></script>
     <title>УТБ Ресурс - Медичне обладнання</title>
   </head>
   <body>
