--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/assets/images/utb-icon.png" />
+    <link rel="icon" href="/assets/images/utb/utb-icon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
