dynamic meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+      content="Компанія “УТБ Ресурс” продуктивно працює на медичному ринку України, здійснюючи постачання та ремонт медичної техніки." />
+    <meta property="og:type" content="Сайт" />
+    <meta property="og:title" content="УТБ Ресурс" />
+    <meta property="og:description" content="Компанія “УТБ Ресурс” продуктивно працює на медичному ринку України, здійснюючи постачання та ремонт медичної техніки." />
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/utb-site.appspot.com/o/images%2Fadditional%2Futb-logo-1.webp?alt=media&token=31c3a5c2-8f3f-4a68-96e2-91c5ebe01eda" />
+    <meta property="og:url" content="PERMALINK" />
+    <meta property="og:site_name" content="УТБ Ресурс - Медичне обладнання" />
     <script src="https://kit.fontawesome.com/b0058ae0f4.js" crossorigin="anonymous"></script>
     <title>УТБ Ресурс - Медичне обладнання</title>
   </head>
