--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="uk">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/assets/images/utb/utb-icon.webp" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Компанія “УТБ Ресурс” продуктивно працює на медичному ринку України, здійснюючи постачання та ремонт медичної техніки." />
-    <meta property="og:type" content="Сайт" />
-    <meta property="og:title" content="УТБ Ресурс" />
-    <meta property="og:description" content="Компанія “УТБ Ресурс” продуктивно працює на медичному ринку України, здійснюючи постачання та ремонт медичної техніки." />
-    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/utb-site.appspot.com/o/images%2Fadditional%2Futb-logo-1.webp?alt=media&token=31c3a5c2-8f3f-4a68-96e2-91c5ebe01eda" />
-    <meta property="og:url" content="PERMALINK" />
-    <meta property="og:site_name" content="УТБ Ресурс - Медичне обладнання" />
-    <script src="https://kit.fontawesome.com/b0058ae0f4.js" crossorigin="anonymous"></script>
-    <title>УТБ Ресурс - Медичне обладнання</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="/assets/images/utb/utb-icon.webp" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#000000" />
+		<meta
+			name="description"
+			content="Компанія “УТБ Ресурс” продуктивно працює на медичному ринку України, здійснюючи постачання та ремонт медичної техніки."
+		/>
+		<meta property="og:type" content="Сайт" />
+		<meta property="og:title" content="УТБ Ресурс" />
+		<meta
+			property="og:description"
+			content="Компанія “УТБ Ресурс” продуктивно працює на медичному ринку України, здійснюючи постачання та ремонт медичної техніки."
+		/>
+		<meta
+			property="og:image"
+			content="https://firebasestorage.googleapis.com/v0/b/utb-site.appspot.com/o/images%2Fadditional%2Futb-logo-1.webp?alt=media&token=31c3a5c2-8f3f-4a68-96e2-91c5ebe01eda"
+		/>
+		<meta property="og:url" content="PERMALINK" />
+		<meta property="og:site_name" content="УТБ Ресурс - Медичне обладнання" />
+		<script
+			src="https://kit.fontawesome.com/b0058ae0f4.js"
+			crossorigin="anonymous"
+		></script>
+		<title>УТБ Ресурс - Медичне обладнання</title>
+	</head>
+	<body>
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="root"></div>
+	</body>
 </html>
