fixed meta tages

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 			name="description"
 			content="Компанія “УТБ Ресурс” продуктивно працює на медичному ринку України, здійснюючи постачання та ремонт медичної техніки."
 		/>
-		<meta property="og:type" content="Сайт" />
+		<meta property="og:type" content="website" />
 		<meta property="og:title" content="УТБ Ресурс" />
 		<meta
 			property="og:description"
