--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/assets/images/utb/utb-icon.webp" />
+		<link rel="icon" href="/assets/images/utb/utb-icon.png" type="image/png"/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
